--- a/project002/index.html
+++ b/project002/index.html
@@ -18,6 +18,10 @@
 
     <!-- 외부스크립트 연결 -->
     <script src="javascript/js.js"></script>
+
+    <!-- 웹앱아이콘 및 파비콘 설정하기 -->
+    <link rel="apple-touch-icon" href="이미지주소">
+    <link rel="shortcut icon" href="이미지주소">
 </head>
 
 <body>
@@ -250,16 +254,18 @@
         </h2>
         <div class="box5_inner">
             <div class="HISTORY chic1">
-                <h3>2014</h3>
-                <div class="content-group">
+                <div class="content-group_1">
                     <img class="img_img" src="img/chicken/Bburinkle.png" alt="2014년 출시된 뿌링클 치킨">
+                    <h3>2014</h3>
+                </div>
+                <div class="content-group_2">
                     <div class="img_txt">
                         <h4>뿌링클</h4>
                         <p>뿌링클은 겉은 바삭하고 달콤짭짤한<br>
                             시즈닝이 더해진 치킨으로, 중독성<br>
                             있는 맛이 특징입니다.
                         </p>
-                        <div>
+                        <div class="img_btn">
                             <p><a href=""><i class="fa-solid fa-basket-shopping"></i>장바구니</a></p>
                             <p><a href="">지금 구매하기</a></p>
                         </div>
@@ -267,16 +273,18 @@
                 </div>
             </div>
             <div class="HISTORY chic2">
-                <h3>2016</h3>
-                <div class="content-group">
+                <div class="content-group_1">
+                    <h3>2016</h3>
                     <img class="img_img" src="img/chicken/MatchoKing.png" alt="2016년 출시된 맛초킹 치킨">
+                </div>
+                <div class="content-group_2">
                     <div class="img_txt">
                         <h4>맛초킹</h4>
                         <p>맛초킹은 매콤달콤한 양념이 입혀진<br>
                             BHC의 인기 치킨 메뉴로, 감칠맛과<br>
                             매콤함이 조화를 이루는 치킨입니다.
                         </p>
-                        <div>
+                        <div class="img_btn">
                             <p><a href=""><i class="fa-solid fa-basket-shopping"></i>장바구니</a></p>
                             <p><a href="">지금 구매하기</a></p>
                         </div>
@@ -284,16 +292,18 @@
                 </div>
             </div>
             <div class="HISTORY chic3">
-                <h3>2019</h3>
-                <div class="content-group">
+                <div class="content-group_1">
                     <img class="img_img" src="img/chicken/HOTBburinkle.png" alt="2019년 출시된 뿌링 핫 치킨">
+                    <h3>2019</h3>
+                </div>
+                <div class="content-group_2">
                     <div class="img_txt">
                         <h4>뿌링 핫</h4>
                         <p>뿌링핫은 바삭한 치킨 위에 매콤달콤한<br>
                             시즈닝을 더한 BHC의 인기 스페셜<br>
                             메뉴입니다.
                         </p>
-                        <div>
+                        <div class="img_btn">
                             <p>
                                 <a href="">
                                     <i class="fa-solid fa-basket-shopping"></i>
@@ -307,9 +317,11 @@
                 </div>
             </div>
             <div class="HISTORY chic4">
-                <h3>2020</h3>
-                <div class="content-group">
+                <div class="content-group_1">
+                    <h3>2020</h3>
                     <img class="img_img" src="img/chicken/Ssai Sunsal.png" alt="2020년 출시된 싸이순살 치킨">
+                </div>
+                <div class="content-group_2">
                     <div class="img_txt">
                         <h4>싸이순살</h4>
                         <p>
@@ -317,7 +329,7 @@
                             달콤하고 짭짤한 양념을 입힌<br>
                             BHC의 인기 메뉴입니다.
                         </p>
-                        <div>
+                        <div class="img_btn">
                             <p>
                                 <a href="">
                                     <i class="fa-solid fa-basket-shopping"></i>
@@ -331,15 +343,17 @@
                 </div>
             </div>
             <div class="HISTORY chic5">
-                <h3>2021</h3>
-                <div class="content-group">
+                <div class="content-group_1">
                     <img class="img_img" src="img/chicken/Gold King.png" alt="2021년 출시된 골드킹 치킨">
+                    <h3>2021</h3>
+                </div>
+                <div class="content-group_2">
                     <div class="img_txt">
                         <h4>골드킹</h4>
                         <p>골드킹은 바삭한 후라이드 치킨에<br>
                             고소하고 풍부한 양념을 더한 <br>
                             BHC의 인기 메뉴입니다.</p>
-                        <div>
+                        <div class="img_btn">
                             <p>
                                 <a href="">
                                     <i class="fa-solid fa-basket-shopping"></i>
@@ -354,22 +368,24 @@
 
             </div>
             <div class="HISTORY chic6">
-                <h3>2025</h3>
-                <div class="content-group">
+                <div class="content-group_1">
+                    <h3>2025</h3>
                     <img class="img_img" src="img/chicken/Kwaksakking_1.png" alt="2025년 출시된 콱삭킹 치킨">
+                </div>
+                <div class="content-group_2">
                     <div class="img_txt">
                         <h4>콱삭킹</h4>
                         <p>콰삭킹은 바삭한 치킨에 매콤달콤한<br>
                             특제 소스를 입힌 BHC의 최신 <br>
                             인기 메뉴입니다.</p>
-                        <div>
+                        <div class="img_btn">
                             <p>
                                 <a href="">
                                     <i class="fa-solid fa-basket-shopping"></i>
                                     장바구니
                                 </a>
                             </p>
-                            <p><a href="">바로 구매하기</a></p>
+                            <p><a href="">지금 구매하기</a></p>
                         </div>
                     </div>
 
@@ -442,7 +458,11 @@
         <div class="Uvid">
             <ul class="track">
                 <li class="slide">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/x896nvB9OwY?si=wf7hgs9dn0XyKQpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%"
+                        src="https://www.youtube.com/embed/x896nvB9OwY?si=wf7hgs9dn0XyKQpA" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/동영상ID2"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -450,15 +470,22 @@
                 </li>
                 </li>
                 <li class="slide is-active">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_EBBSpbzrpk?si=NcyVC9aFzjLLRhk6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_EBBSpbzrpk?si=NcyVC9aFzjLLRhk6"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/동영상ID2"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe> -->
                 </li>
                 </li>
-                <li class="slide"><iframe width="560" height="315" src="https://www.youtube.com/embed/sqS6zXH2-04?si=-KhEhIv4GUqxc_Zt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/동영상ID2"
+                <li class="slide"><iframe width="560" height="315"
+                        src="https://www.youtube.com/embed/sqS6zXH2-04?si=-KhEhIv4GUqxc_Zt" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/동영상ID2"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe> -->
