--- a/project003/index.html
+++ b/project003/index.html
@@ -13,7 +13,7 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
 
     <!-- 외부스크립트연결 -->
-    <script src="js.js"></script>
+    <script src="javascript/js.js"></script>
 
     <!-- 폰트어썸연결CDN -->
     <!-- <script src="https://kit.fontawesome.com/5b60675eee.js" crossorigin="anonymous"></script> -->
