--- a/Ai_index.html
+++ b/Ai_index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design & Code Portfolio</title>
     <!-- 스타일시트 연결 -->
-     <link rel="stylesheet" href="Ai_style.css">
-    
+    <link rel="stylesheet" href="Ai_style.css">
+
 </head>
 
 <body>
@@ -27,23 +27,29 @@
                 <li class="logo"><a href="#home"><img src="landing_img/smallkoi_white.png" alt="home"></a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
-            </ul> 
-        </nav>        
+            </ul>
+        </nav>
     </header>
 
     <section class="hero" id="home">
-        <!-- <div class="goldfish"></div> -->
-        <div class="realistic-fish"></div>
-        
+        <!-- <div class="goldfish"></div>
+        <div class="realistic-fish"></div> -->
+
         <div class="hero-content">
             <div class="LogoTop"><img src="landing_img/LogoTop.png" alt=""></div>
+
             <h1>
                 <div class="koi"><img src="landing_img/koi.png" alt=""></div>
                 <div class="logo_big"><img src="landing_img/portfolio_logo.png" alt=""></div>
             </h1>
-            <p class="description">창의적 디자인과 코드의 완벽한 조화로<br>사용자 경험을 혁신합니다</p>
-            <a href="#projects" class="cta-button">프로젝트 둘러보기</a>
+
+            <!-- <p class="description">창의적 디자인과 코드의 완벽한 조화로<br>사용자 경험을 혁신합니다</p> -->
+            <!-- <a href="#projects" class="cta-button">프로젝트 둘러보기</a> -->
         </div>
+        <ul class="Scroll">
+            <li class="mouse"><img src="landing_img/mouse.png" alt=""></li>
+            <li class="mouseScroll"><img src="landing_img/MouseScroll02.png" alt=""></li>
+        </ul>
     </section>
 
     <main>
@@ -52,79 +58,160 @@
             <div class="about-content">
                 <div class="profile-section">
                     <div class="profile-image">
-                        프로필 이미지
+                        <img src="landing_img/LEEJIEUN.png" alt="">
                     </div>
                     <div class="profile-tags">
-                        <span class="tag">UI/UX Design</span>
+                        <span class="tag">ENFP</span>
                         <span class="tag">태권도 3단</span>
-                        <span class="tag">Creative</span>
-                        <span class="tag">자동차운전면허증1급</span>
+                        <span class="tag">중국어</span>
+                        <!-- <span class="tag">1종 보통 면허</span> -->
                     </div>
                 </div>
+
                 <div class="about-text">
-                    <p>안녕하세요! 디자인과 코드의 경계를 넘나드는 창작자입니다. 아름다운 시각적 경험과 완벽한 사용자 인터페이스를 만드는 것이 저의 열정입니다.</p>
+
+                    <div class="AboutMe">
+                        <h3>About me</h3>
+                        <ul class="">
+                            <li>이지은</li>
+                            <!-- <li>ENFP</li> -->
+                            <li>dlwldms58@naver.com</li>
+                        </ul>
+                    </div>
+
+                    <div class="License">
+                        <h3>License</h3>
+                        <ul class="">
+                            <li><strong></strong></li>
+                            <!-- <li>HSK5급</li> -->
+                            <!-- <li>태권도 3단</li> -->
+                            <li>1종 보통 면허</li>
+                            <li>TOEIC speaking MI3</li>
+                        </ul>
+                    </div>
+
+                    <div class="Education">
+                        <h3>Education</h3>
+                        <ul class="">
+                            <li>2024 - 대전대학교 중문과 졸업</li>
+                            <li>2025 - NCS UI/UX 반응형 웹디자인 & 웹퍼블리셔 개발자 과정 수료</li>
+                        </ul>
+                    </div>
+
+                    <div class="KeyWords">
+                        <h3>Key words</h3>
+                        <ul>
+                            <li>소통능력</li>
+                            <li>끈기</li>
+                            <li>도전 정신</li>
+                            <li>적응력</li>
+                            <li>세심함</li>
+                            <li>목표지향</li>
+                        </ul>
+                    </div>
+
+                    <div class="Skills">
+                        <h3>Skills</h3>
+                        <ul>
+                            <li><img src="landing_img/html_Icon2 1.png" alt=""></li>
+                            <li><img src="landing_img/css_Icon 2.png" alt=""></li>
+                            <li><img src="landing_img/javascript_icon 2.png" alt=""></li>
+                            <li><img src="landing_img/jQuery_icon 2.png" alt=""></li>
+                            <li><img src="landing_img/photoshopIcon.png" alt=""></li>
+                            <li><img src="landing_img/illustratorIcon.png" alt=""></li>
+                            <li><img src="landing_img/figma_icon2 1.png" alt=""></li>
+                        </ul>
+                    </div>
+                    <!-- <p>안녕하세요! 디자인과 코드의 경계를 넘나드는 창작자입니다. 아름다운 시각적 경험과 완벽한 사용자 인터페이스를 만드는 것이 저의 열정입니다.</p>
 
                     <p>사용자 중심의 디자인 철학을 바탕으로, 단순히 예쁜 것을 넘어서 의미있고 기능적인 디지털 경험을 창조합니다. 새로운 기술과 디자인 트렌드를 끊임없이 탐구하며, 창의적인
                         솔루션을 통해 복잡한 문제를 해결합니다.</p>
 
-                    <p>디자인과 개발 사이의 완벽한 균형을 추구하며, 아이디어에서 실제 구현까지 전 과정을 아우르는 통합적 접근 방식을 지향합니다.</p>
+                    <p>디자인과 개발 사이의 완벽한 균형을 추구하며, 아이디어에서 실제 구현까지 전 과정을 아우르는 통합적 접근 방식을 지향합니다.</p> -->
                 </div>
             </div>
         </section>
 
-        <section class="section" id="skills">
+        <!-- <section class="section" id="skills">
             <h2 class="section-title">Skills & Expertise</h2>
             <div class="skills-grid">
                 <div class="skill-card">
-                    <div class="skill-icon">🎨</div>
-                    <h3>UI/UX Design</h3>
-                    <p>Figma, Sketch, Adobe XD를 활용한 사용자 중심의 인터페이스 디자인과 프로토타이핑</p>
+                    <div class="skill-icon"><img src="landing_img/html_Icon2 1.png" alt=""></div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon">💻</div>
-                    <h3>Frontend Development</h3>
-                    <p>React, Vue.js, JavaScript, CSS를 활용한 반응형 웹 애플리케이션 개발</p>
+                    <div class="skill-icon"><img src="landing_img/css_Icon 2.png" alt=""></div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon">🔧</div>
-                    <h3>Creative Coding</h3>
-                    <p>Three.js, Canvas API를 이용한 인터랙티브 웹 경험과 비주얼 이펙트 구현</p>
+                    <div class="skill-icon"><img src="landing_img/javascript_icon 2.png" alt=""></div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon">📱</div>
-                    <h3>Mobile Design</h3>
-                    <p>iOS, Android 플랫폼에 최적화된 모바일 앱 UI/UX 디자인</p>
+                    <div class="skill-icon"><img src="landing_img/jQuery_icon 2.png" alt=""></div>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon"><img src="landing_img/photoshopIcon.png" alt=""></div>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon"><img src="landing_img/illustratorIcon.png" alt=""></div>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon"><img src="landing_img/figma_icon2 1.png" alt=""></div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="section" id="projects">
-            <h2 class="section-title">Featured Projects</h2>
+            <h2 class="section-title">2025 Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-image">Interactive Dashboard</div>
+                    <div class="project-image"><img src="landing_img/aquaLandingPage.png" alt="">
+                    </div>
                     <div class="project-content">
-                        <h3 class="project-title">데이터 비주얼라이제이션 대시보드</h3>
-                        <p class="project-description">복잡한 데이터를 직관적으로 시각화하는 인터랙티브 대시보드입니다. React와 D3.js를 활용해 실시간 데이터를
-                            아름다운 차트로 표현합니다.</p>
-                        <a href="#" class="project-link">자세히 보기 →</a>
+                        <h3 class="project-title">대전 아쿠아리움 웹사이트 리뉴얼</h3>
+                        <p class="project-description">직관적인 정보 탐색과 예매 시스템, 생동감 있는 디자인으로 즐거운 해양 체험을 온라인에서도 느낄 수 있도록 한
+                            프로젝트입니다.</p>
+                        <ul class="project-proficiency">
+                            <li><strong>Type</strong> 개인작업 100%</li>
+                            <li><strong>Tools</strong> Figma, Photoshop, HTML5, CSS3, Javascript</li>
+                        </ul>
+                        <ul class="project-linkBox">
+                            <li><a href="#" class="project-link">Concept View</a></li>
+                            <li><a href="https://dlwldms58.github.io/portfolio2025/project001/" class="project-link">Web
+                                    Site</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image">Mobile App Design</div>
+                    <div class="project-image"><img src="landing_img/BhcLandingPage.png" alt=""></div>
                     <div class="project-content">
-                        <h3 class="project-title">여행 플래너 모바일 앱</h3>
-                        <p class="project-description">사용자 여행 경험을 혁신하는 모바일 앱 UI/UX 디자인입니다. 직관적인 네비게이션과 개인화된 추천 시스템을
-                            구현했습니다.</p>
-                        <a href="#" class="project-link">자세히 보기 →</a>
+                        <h3 class="project-title">BHC 웹사이트 리뉴얼</h3>
+                        <p class="project-description">브랜드 아이덴티티 강화와 함께 캐러셀등 다양한 인터랙션을 적용해, 시각적 즐거움과 몰입감 있는 사용자 경험으로
+                            리뉴얼했습니다.</p>
+                        <ul class="project-proficiency">
+                            <li><strong>Type</strong> 개인작업 100%</li>
+                            <li><strong>Tools</strong> Figma, Photoshop, HTML5, CSS3, Javascript</li>
+                        </ul>
+                        <ul class="project-linkBox">
+                            <li><a href="#" class="project-link">Concept View</a></li>
+                            <li><a href="https://dlwldms58.github.io/portfolio2025/project002/" class="project-link">Web
+                                    Site</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image">Creative Portfolio</div>
+                    <div class="project-image"><img src="landing_img/roseLandingPage.png" alt=""></div>
                     <div class="project-content">
-                        <h3 class="project-title">인터랙티브 포트폴리오</h3>
-                        <p class="project-description">창의적인 애니메이션과 마이크로 인터랙션을 활용한 개인 포트폴리오 웹사이트입니다.</p>
-                        <a href="#" class="project-link">자세히 보기 →</a>
+                        <h3 class="project-title">Blackpink 로제 인물형 웹사이트</h3>
+                        <p class="project-description">파노라마와 별 떨어짐 애니메이션 등 인터랙션 효과를 활용해, 로제의 음악·패션·커리어를 감각적으로 전달하는
+                            웹사이트입니다.</p>
+                        <ul class="project-proficiency">
+                            <li><strong>Type</strong> 개인작업 100%</li>
+                            <li><strong>Tools</strong> Figma, Photoshop, HTML5, CSS3, Javascript</li>
+                        </ul>
+                        <ul class="project-linkBox">
+                            <li><a href="#" class="project-link">Concept View</a></li>
+                            <li><a href="https://dlwldms58.github.io/portfolio2025/project003/" class="project-link">Web
+                                    Site</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -136,16 +223,17 @@
                 <p>새로운 프로젝트나 창의적인 협업에 대한 이야기를 나누고 싶습니다.<br>언제든지 편하게 연락해 주세요!</p>
                 <div class="contact-info">
                     <div class="contact-item">
-                        <div class="contact-icon">✉️</div>
-                        <span>hello@designcode.com</span>
+                        <div class="contact-icon"><img src="landing_img/MailIcon.png" alt=""></div>
+                        <span>dlwldms58@naver.com</span>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-icon">💬</div>
-                        <span>카카오톡 상담</span>
+                        <div class="contact-icon"><img src="landing_img/kakao-talkIcon.png" alt=""></div>
+                        <span><a href="">카카오톡</a></span>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-icon">🔗</div>
-                        <span>LinkedIn 연결</span>
+                        <div class="contact-githubIcon"><img src="landing_img/githubIcon.png" alt=""></div>
+                        <!-- <div>🔗</div> -->
+                        <span><a href="">Github</a></span>
                     </div>
                 </div>
             </div>
@@ -154,9 +242,33 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Design & Code Portfolio. Crafted with passion.</p>
+            <!-- <p>본 페이지는 포트폴리오용으로 제작된 사이트 입니다.
+                해당사이트의 이미지와 동영상 기타 상세내용은 상업용으로 사용하지 않습니다.</p> -->
+            <p>copyright ⓒ 2025.green310. All Rights Reserved.</p>
         </div>
     </footer>
+
+
+
+    <!-- 컨셉뷰 팝업설정 -->
+
+    <div class="Black_Bg on">
+        <span class="close"></span>
+        <!-- 프로젝트001 -->
+        <div class="popUp" style="display: block;">
+            <img src="" alt="">
+        </div>
+
+        <!-- 프로젝트002 -->
+        <div class="popUp">
+            <img src="" alt="">
+        </div>
+
+        <!-- 프로젝트003 -->
+        <div class="popUp">
+            <img src="" alt="">
+        </div>
+    </div>
 
     <script>
         // 스무스 스크롤
