--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이지은의 포트폴리오</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>이지은 아이콘 또는 로코</h1>
     <nav>
         <ul>
-            <li>about- 본인의 프로필</li>
-            <li>bhc 리뉴얼</li>
-            <li></li>
-            <li></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li class="logo"><a href="#home"><img src="landing_img/smallkoi_white.png" alt="home"></a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <div id="wrap">
@@ -21,15 +26,16 @@
             <div class="btn">
                 <ul>
                     <li>컨셉뷰연결</li>
-                    <li><a href="" target="_blank" >링크바로가기</a></li>
+                    <li><a href="" target="_blank">링크바로가기</a></li>
                 </ul>
             </div>
             <div class="conceptView">
-                <img src="" alt=""> 
+                <img src="" alt="">
             </div>
         </section>
         <section>작품2내용</section>
         <section>작품3내용</section>
     </div>
 </body>
+
 </html>
