--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <!-- 스타일시트 연결 -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- 제이쿼리 CDN -->
+    <script src="javascript/jquery-3.7.1.min.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+
+    <!--  폰트어썸CDN -->
+    <!-- <script src="https://kit.fontawesome.com/72900f73c2.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/5b60675eee.js" crossorigin="anonymous"></script>
+
+    <!-- 외부스크립트 연결 -->
+    <script src="javascript/js.js"></script>
+
 </head>
 
 <body>
@@ -24,7 +35,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#about">Skills</a></li>
-                <li class="logo"><a href="#home"><img src="landing_img/smallkoi_white.png" alt="home"></a></li>
+                <li class="logo"><a href="#home"><img src="images/smallkoi_white.png" alt="home"></a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -32,23 +43,14 @@
     </header>
 
     <section class="hero" id="home">
-        <!-- <div class="goldfish"></div>
-        <div class="realistic-fish"></div> -->
-
-        <div class="hero-content">
-            <div class="LogoTop"><img src="landing_img/LogoTop.png" alt=""></div>
-
-            <h1>
-                <div class="koi"><img src="landing_img/koi.png" alt=""></div>
-                <div class="logo_big"><img src="landing_img/portfolio_logo.png" alt=""></div>
-            </h1>
-
-            <!-- <p class="description">창의적 디자인과 코드의 완벽한 조화로<br>사용자 경험을 혁신합니다</p> -->
-            <!-- <a href="#projects" class="cta-button">프로젝트 둘러보기</a> -->
-        </div>
+        <div class="LogoTop"><img src="images/LogoTop.png" alt=""></div>
+        <h1>
+            <div class="koi"><img src="images/koi.png" alt=""></div>
+            <div class="logo_big"><img src="images/portfolio_logo.png" alt=""></div>
+        </h1>
         <ul class="Scroll">
-            <li class="mouse"><img src="landing_img/mouse.png" alt=""></li>
-            <li class="mouseScroll"><img src="landing_img/MouseScroll02.png" alt=""></li>
+            <li class="mouse"><img src="images/mouse.png" alt=""></li>
+            <li class="mouseScroll"><img src="images/MouseScroll02.png" alt=""></li>
         </ul>
     </section>
 
@@ -58,7 +60,7 @@
             <div class="about-content">
                 <div class="profile-section">
                     <div class="profile-image">
-                        <img src="landing_img/LEEJIEUN.png" alt="">
+                        <img src="images/LEEJIEUN.png" alt="">
                     </div>
                     <div class="profile-tags">
                         <span class="tag">ENFP</span>
@@ -113,13 +115,13 @@
                     <div class="Skills">
                         <h3>Skills</h3>
                         <ul>
-                            <li><img src="landing_img/html_Icon2 1.png" alt=""></li>
-                            <li><img src="landing_img/css_Icon 2.png" alt=""></li>
-                            <li><img src="landing_img/javascript_icon 2.png" alt=""></li>
-                            <li><img src="landing_img/jQuery_icon 2.png" alt=""></li>
-                            <li><img src="landing_img/photoshopIcon.png" alt=""></li>
-                            <li><img src="landing_img/illustratorIcon.png" alt=""></li>
-                            <li><img src="landing_img/figma_icon2 1.png" alt=""></li>
+                            <li><img src="images/html_Icon2 1.png" alt=""></li>
+                            <li><img src="images/css_Icon 2.png" alt=""></li>
+                            <li><img src="images/javascript_icon 2.png" alt=""></li>
+                            <li><img src="images/jQuery_icon 2.png" alt=""></li>
+                            <li><img src="images/photoshopIcon.png" alt=""></li>
+                            <li><img src="images/illustratorIcon.png" alt=""></li>
+                            <li><img src="images/figma_icon2 1.png" alt=""></li>
                         </ul>
                     </div>
                     <!-- <p>안녕하세요! 디자인과 코드의 경계를 넘나드는 창작자입니다. 아름다운 시각적 경험과 완벽한 사용자 인터페이스를 만드는 것이 저의 열정입니다.</p>
@@ -136,7 +138,7 @@
             <h2 class="section-title">2025 Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-image"><img src="landing_img/aquaLandingPage.png" alt="">
+                    <div class="project-image"><img src="images/projectLandingPage.png" alt="">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">대전 아쿠아리움 웹사이트 리뉴얼</h3>
@@ -154,7 +156,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image"><img src="landing_img/BhcLandingPage.png" alt=""></div>
+                    <div class="project-image"><img src="images/BhcLandingPage.png" alt=""></div>
                     <div class="project-content">
                         <h3 class="project-title">BHC 웹사이트 리뉴얼</h3>
                         <p class="project-description">브랜드 아이덴티티 강화와 함께 캐러셀등 다양한 인터랙션을 적용해, 시각적 즐거움과 몰입감 있는 사용자 경험으로
@@ -171,7 +173,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image"><img src="landing_img/roseLandingPage.png" alt=""></div>
+                    <div class="project-image"><img src="images/roseLandingPage.png" alt=""></div>
                     <div class="project-content">
                         <h3 class="project-title">Blackpink 로제 인물형 웹사이트</h3>
                         <p class="project-description">파노라마와 별 떨어짐 애니메이션 등 인터랙션 효과를 활용해, 로제의 음악·패션·커리어를 감각적으로 전달하는
@@ -196,15 +198,15 @@
                 <p>새로운 프로젝트나 창의적인 협업에 대한 이야기를 나누고 싶습니다.<br>언제든지 편하게 연락해 주세요!</p>
                 <div class="contact-info">
                     <div class="contact-item">
-                        <div class="contact-icon"><img src="landing_img/MailIcon.png" alt=""></div>
+                        <div class="contact-icon"><img src="images/MailIcon.png" alt=""></div>
                         <span>dlwldms58@naver.com</span>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-icon"><img src="landing_img/kakao-talkIcon.png" alt=""></div>
-                        <span><a href="">카카오톡</a></span>
+                        <div class="contact-icon"><img src="images/kakao-talkIcon.png" alt=""></div>
+                        <span><a href="">dlwldms58</a></span>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-githubIcon"><img src="landing_img/githubIcon.png" alt=""></div>
+                        <div class="contact-githubIcon"><img src="images/githubIcon.png" alt=""></div>
                         <!-- <div>🔗</div> -->
                         <span><a href="">Github</a></span>
                     </div>
@@ -218,7 +220,7 @@
 
             <p>copyright ⓒ 2025.green310. All Rights Reserved.</p>
 
-                        <p>본 페이지는 포트폴리오용으로 제작된 사이트 입니다.
+            <p>본 페이지는 포트폴리오용으로 제작된 사이트 입니다.
                 해당사이트의 이미지와 동영상 기타 상세내용은 상업용으로 사용하지 않습니다.</p>
         </div>
     </footer>
@@ -245,13 +247,16 @@
         </div>
     </div>
 
+
+
+
     <script>
         // 스무스 스크롤
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
                 const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
+                if (target) {   
                     target.scrollIntoView({
                         behavior: 'smooth',
                         block: 'start'
