--- a/memo.html
+++ b/memo.html
@@ -24,7 +24,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li class="logo"><a href="#home"><img src="landing_img/smallkoi_white.png" alt="home"></a></li>
+                <li class="logo"><a href="#home"><img src="images/smallkoi_white.png" alt="home"></a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -38,10 +38,10 @@
         <div class="hero-content">
 
             <h1>
-                <div class="koi"><img src="landing_img/koi.png" alt=""></div>
-                <div class="logo_big"><img src="landing_img/portfolio_logo.png" alt=""></div>
+                <div class="koi"><img src="images/koi.png" alt=""></div>
+                <div class="logo_big"><img src="images/portfolio_logo.png" alt=""></div>
             </h1>
-            <div class="LogoTop"><img src="landing_img/LogoTop.png" alt=""></div>
+            <div class="LogoTop"><img src="images/LogoTop.png" alt=""></div>
             <!-- <p class="description">창의적 디자인과 코드의 완벽한 조화로<br>사용자 경험을 혁신합니다</p> -->
             <!-- <a href="#projects" class="cta-button">프로젝트 둘러보기</a> -->
         </div>
