--- a/project001/index.html
+++ b/project001/index.html
@@ -44,6 +44,12 @@
                     <li><a href="">아쿠아톡</a></li>
                 </ul>
             </nav>
+            <div class="myReservation">
+                <a href="" class="myReservationIcon" >
+                    <img src="img/Ticket(white).png" alt="">
+                </a>
+                <p><a href="">내 예약</a></p>
+            </div>
             <div class="util">
                 <a href="">한/영</a>
             </div>
