--- a/project001/index.html
+++ b/project001/index.html
@@ -12,7 +12,10 @@
     <!-- 외부스타일시트연결 -->
     <link rel="stylesheet" href="css/style.css">
     <!-- 제이쿼리CDN -->
+    <script src="javascript/jquery-3.7.1.min.js"></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
+
+    <!-- 캘린더CDN -->
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.css">
 
@@ -75,8 +78,8 @@
                     <div class="imgWrap">
                         <img src="img/hero-Img.jpg" alt="1">
                         <img src="img/Watching-the-Underwater-Performance.png" alt="2">
-                        <img src="img/Fish-Touch-Experience.jpg" alt="3">
-                        
+                        <!-- <img src="img/Fish-Touch-Experience.jpg" alt="3"> -->
+
                     </div>
                     <div class="btnR"><img src="img/box2_btnR.png" alt=""></div>
                 </section>
@@ -503,7 +506,8 @@
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3215.0966553007534!2d127.41849307561901!3d36.309962895181094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35654ed7244b3f81%3A0x96beb8f73ba98323!2z64yA7KCE7JWE7L-g7JWE66as7JuA!5e0!3m2!1sko!2skr!4v1760502860935!5m2!1sko!2skr"
                     width="900" height="600" style="border-radius:20px;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
             <div class="box10-2">
                 <div>
